--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,5 +1,4 @@
-.reviews {
-  padding: 30px;
+.review {
   background-color: $white;
   box-sizing: border-box;
 
@@ -13,7 +12,7 @@
   }
 }
 
-.reviews__title {
+.review__title {
   position: relative;
   margin-bottom: 33px;
   font-weight: 500;
@@ -23,7 +22,7 @@
   text-align: left;
 
   &::after {
-    @include line (-13px, 68px, 0.73px, $orange);
+    @include line(-13px, 68px, 0.73px, $orange);
   }
 
   @media (max-width: $mobile-width) {
@@ -36,17 +35,17 @@
   }
 }
 
-.reviews__author {
+.review__author {
   display: flex;
   align-items: center;
 }
 
-.reviews__userpic {
+.review__userpic {
   margin-right: 15px;
   width: 37px;
 }
 
-.reviews__name {
+.review__author-name {
   font-size: 16px;
   line-height: 20px;
   font-style: normal;
@@ -54,7 +53,7 @@
   color: $black-special;
 }
 
-.reviews__text {
+.review__text {
   margin: 0 0 35px;
   font-size: 14px;
   letter-spacing: -0.408333px;
