--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,8 +10,9 @@
 @import "blocks/intro";
 @import "blocks/button";
 @import "blocks/places";
-@import "blocks/swiper";
-@import "blocks/reviews";
+@import "blocks/slider";
+@import "blocks/slide";
+@import "blocks/review";
 @import "blocks/price";
 @import "blocks/tariffs";
 @import "blocks/feedback";
