--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,9 +1,9 @@
 .review {
+  padding: 30px;
   background-color: $white;
   box-sizing: border-box;
 
   @media (max-width: $tablet-width) {
-    padding: 100px 30px 0;
     text-align: left;
   }
 
@@ -22,7 +22,7 @@
   text-align: left;
 
   &::after {
-    @include line(-13px, 68px, 0.73px, $orange);
+    @include line(-11px, 68px, 0.73px, $orange);
   }
 
   @media (max-width: $mobile-width) {
