--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,12 +1,12 @@
 .slider__tabs {
   @include list-style-reset;
-  position: relative;
   display: flex;
   border-bottom: 1px solid rgba($black-special, 0.3);
-  overflow: hidden;
 
   @media (max-width: $tablet-width) {
-    width: 768px;
+    margin-left: 30px;
+    width: auto;
+    overflow-x: scroll;
   }
 }
 
