--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,64 +1,97 @@
 .intro {
-  position: relative;
-  margin-bottom: 199px;
-  padding-top: 185px;
-  min-height: 860px;
+  padding: 0 calc(50vw - 36.5rem);
   color: $white;
-  box-sizing: border-box;
-
-  background-image: url("../img/intro-bg-desktop@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-color: $grey;
-
-  @media (min-resolution: $retina) {
-    background-image: url("../img/intro-bg-desktop@2x.jpg");
-  }
-
-  @media (max-width: $tablet-width) {
-    padding: 60px 0;
-    min-height: 344px;
-    text-align: center;
-    background-image: url("../img/intro-bg-tablet@1x.jpg");
-    background-size: 1023px auto;
-
-    @media (min-resolution: $retina) {
-      background-image: url("../img/intro-bg-tablet@2x.jpg");
-    }
-  }
-
-  @media (max-width: $mobile-width) {
-    padding-top: 81px;
-    background-image: url("../img/intro-bg-mobile@1x.jpg");
-    background-size: 767px auto;
-
-    @media (min-resolution: $retina) {
-      background-image: url("../img/intro-bg-mobile@2x.jpg");
-    }
-  }
 }
 
-.intro__wrapper {
-  @include wrapper;
+.intro__img {
+  margin: 0 calc(((100vw - 100%) / 2) * -1);
+}
+
+.intro__img img {
+  height: 860px;
+  object-fit: cover;
+  background-color: $black-special;
 }
 
 .intro__inner {
-  margin-left: auto;
-  padding-right: 15px;
-  width: 40%;
+  margin-top: -781px;
+  padding-top: 105px;
+  padding-left: 59%;
+  padding-right: 5%;
   box-sizing: border-box;
-
-  @media (max-width: $tablet-width) {
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-  }
 }
+
+// .intro {
+//   position: relative;
+//   margin-bottom: 199px;
+//   padding-top: 185px;
+//   padding-bottom: 90px;
+//   min-height: 860px;
+//   color: $white;
+//   box-sizing: border-box;
+
+//   background-image: url("../img/intro-bg-desktop@1x.jpg");
+//   background-repeat: no-repeat;
+//   background-position: center center;
+//   background-size: cover;
+//   background-color: $grey;
+
+//   @media (min-resolution: $retina) {
+//     background-image: url("../img/intro-bg-desktop@2x.jpg");
+//   }
+
+//   @media (max-width: $tablet-width) {
+//     padding: 60px 0;
+//     min-height: 344px;
+//     text-align: center;
+//     background-image: url("../img/intro-bg-tablet@1x.jpg");
+//     background-size: 1023px auto;
+
+//     @media (min-resolution: $retina) {
+//       background-image: url("../img/intro-bg-tablet@2x.jpg");
+//     }
+//   }
+
+//   @media (max-width: $mobile-width) {
+//     padding-top: 81px;
+//     min-height: 235px;
+//     background-image: url("../img/intro-bg-mobile@1x.jpg");
+//     background-size: 767px auto;
+
+//     @media (min-resolution: $retina) {
+//       background-image: url("../img/intro-bg-mobile@2x.jpg");
+//     }
+//   }
+// }
+
+// .intro__wrapper {
+//   @include wrapper;
+
+//   @media (max-width: $tablet-width) {
+//     width: calc(100vw - 363px);
+//   }
+
+//   @media (max-width: $mobile-width) {
+//     width: calc(100vw - 40px);
+//   }
+// }
+
+// .intro__inner {
+//   margin-left: auto;
+//   padding-right: 7rem;
+//   width: 42%;
+//   box-sizing: border-box;
+
+//   @media (max-width: $tablet-width) {
+//     margin: 0 auto;
+//     padding: 0;
+//     width: auto;
+//   }
+// }
 
 .intro__title {
   margin: 0;
-  margin-bottom: 28px;
+  margin-bottom: 1.87rem;
   color: inherit;
   letter-spacing: -1.11px;
 
@@ -69,7 +102,6 @@
 
   @media (max-width: $mobile-width) {
     margin: 0 auto;
-    width: 294px;
     font-size: 24px;
     line-height: 150%;
   }
@@ -78,20 +110,23 @@
 .intro__text {
   margin: 0 0 34px;
   line-height: 170%;
-  letter-spacing: -0.47px;
+  // letter-spacing: -0.47px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 10px;
+  }
 
   @media (max-width: $mobile-width) {
     position: absolute;
-    top: 100%;
+    top: 109%;
     left: 0;
-    padding: 15px;
     color: $black-special;
   }
 }
 
 .intro__button {
   position: relative;
-  width: 340px;
+  min-width: 340px;
 
   &::after {
     @include pseudo;
@@ -100,16 +135,21 @@
     width: 16px;
     height: 16px;
     background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 1V15' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M15 8L8 15L1 8' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+
+    @media (max-width: $tablet-width) {
+      top: 32%;
+    }
   }
 
   @media (max-width: $tablet-width) {
+    margin: 0 19%;
     text-align: left;
   }
 
-  @media (max-width: $mobile-width) {
-    position: absolute;
-    top: 130%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+  // @media (max-width: $mobile-width) {
+  //   position: absolute;
+  //   top: 130%;
+  //   left: 50%;
+  //   transform: translateX(-50%);
+  // }
 }
