--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,12 +3,12 @@
 @import "global/vars";
 @import "global/global";
 @import "global/visually-hidden";
+@import "blocks/button";
 @import "blocks/title";
 @import "blocks/header";
 @import "blocks/site-nav";
-@import "blocks/footer";
+// @import "blocks/footer";
 @import "blocks/intro";
-@import "blocks/button";
 @import "blocks/places";
 @import "blocks/slider";
 @import "blocks/slide";
