--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -17,7 +17,7 @@
 }
 
 .header__logo {
-  display: block;
+  display: inline-block;
   margin-right: auto;
   padding: 40px 20px 30px;
 
@@ -28,6 +28,10 @@
       width: 44px;
       height: auto;
     }
+  }
+
+  @media (max-width: $mobile-width) {
+    padding: 16px 16px 6px;
   }
 }
 
