--- a/source/sass/blocks/site-nav.scss
+++ b/source/sass/blocks/site-nav.scss
@@ -19,7 +19,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 72px;
+      width: 50px;
       height: 50px;
       border: none;
       background-color: $orange;
@@ -30,12 +30,13 @@
 
 .site-nav--closed .site-nav__toggler::after {
   @include pseudo;
-  top: 15px;
-  left: 25px;
-  width: 25px;
+  top: 35%;
+  left: 50%;
+  width: 22px;
   height: 2px;
   background-color: $white;
-  box-shadow: 0 8px 0 0 $white, 0 16px 0 0 $white;
+  box-shadow: 0 6px 0 0 $white, 0 12px 0 0 $white;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .site-nav--opened {
