--- a/source/sass/global/mixin.scss
+++ b/source/sass/global/mixin.scss
@@ -23,4 +23,9 @@
   margin: 0 auto;
   max-width: 1210px;
   width: calc(100vw - 50px);
+  min-width: 320px;
+
+  @media (max-width: $mobile-width) {
+    width: calc(100vw - 2rem);
+  }
 }
